--- a/etc/primes.conf
+++ b/etc/primes.conf
@@ -11,10 +11,12 @@ path=stderr
 [mongodbstore]
 
 # MongoDB URI, e.g. 127.0.0.1:27017,mongodb://root:qwer1234@localhost/admin
-mongo.uri=127.0.0.1:27017
+# mongo.uri=mongodb://test:test1234@ds151451.mlab.com:51451/reservation
+# mongodb://<dbuser>:<dbpassword>@ds151463.mlab.com:51463/mgdb
+mongo.uri=mongodb://admin:joenut1234@ds151463.mlab.com:51463/mgdb
 
 # MongoDB database, e.g. Reservation
-mongo.db=Reservation
+mongo.db=WebProject
 
 #############################################################################
 [http]
