--- a/etc/primes.conf
+++ b/etc/primes.conf
@@ -16,7 +16,7 @@ path=stderr
 mongo.uri=mongodb://admin:joenut1234@ds151463.mlab.com:51463/mgdb
 
 # MongoDB database, e.g. Reservation
-mongo.db=WebProject
+mongo.db=mgdb
 
 #############################################################################
 [http]
